--- a/package.json
+++ b/package.json
@@ -5,30 +5,35 @@
   "scripts": {
     "dev": "next dev ",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "node ./scripts/build-search.js"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^2.2.1",
+    "@auth0/nextjs-auth0": "^3.0.1",
     "@contentful/rich-text-react-renderer": "^15.17.0",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@hookform/resolvers": "^2.9.11",
+    "algoliasearch": "^4.19.1",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cohere-ai": "^6.2.2",
     "concurrently": "^8.2.0",
     "contentful": "^10.3.5",
+    "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "flask": "^0.2.10",
     "gray-matter": "^4.0.3",
     "mongodb": "^4.13.0",
     "next": "13.1.1",
-    "next-auth": "3.29.10",
-    "node-sass": "^8.0.0",
+    "next-auth": "^4.22.3",
+    "node-fetch": "^2.6.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-instantsearch-dom": "^6.40.4",
     "react-markdown": "^8.0.5",
+    "sass": "^1.64.2",
     "swiper": "^9.0.2",
     "swr": "^2.0.2",
     "yup": "^1.0.0"
@@ -38,8 +43,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-    "sass": "^1.58.2",
-    "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4",
     "webpack": "^5.76.1"
   }
